# notes2ics

./: Cargo.toml  Dockerfile  docker-compose.yml
src/: main.rs
