[package]
name = "notes2ics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.11", features = ["native-tls-vendored", "cookies"] }
anyhow = "1"
icalendar = { version = "0.15", features = ["chrono-tz"] }
chrono = "0"
dyn-fmt = "0.4.0"
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
envconfig = "0.10"
